--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  # UI
   cupertino_icons: ^1.0.2
+  flutter_switch: ^0.3.2
 
   # Management
   hooks_riverpod: ^2.1.1
