--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,12 @@ dependencies:
   # Localization
   easy_localization: ^3.0.1
 
+  # Permisson
+  permission_handler: ^10.2.0
+
+  # Location
+  geolocator: ^9.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,7 +70,11 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints:
+    ^2.0.0
+
+    # Splash Screen
+  flutter_native_splash: ^2.2.16
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
